# FileDrop-cli

./: .gitignore  Cargo.toml  Package.swift  README.md
Sources/FileDrop-cli/: main.swift
Tests/: LinuxMain.swift
Tests/FileDrop-cliTests/: FileDrop_cliTests.swift  XCTestManifests.swift
src/: common.rs  filedrop_api_client.rs  main.rs  simple_error.rs
src/api/: filedrop_api_client.rs  mod.rs
src/commands/: commands.rs  mod.rs
src/models/: mod.rs
