[package]
name = "filedrop-cli"
version = "0.1.0"
authors = ["gudmunduro <goh00@protonmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
structopt = { version = "0.3", default-features = false }
reqwest = { version = "0.11", features = ["json", "blocking", "multipart"] }
serde = "1.0"
serde_json = "1.0"
serde_derive = "1.0"
mime_guess = "2.0"
anyhow = "1.0.41"